--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Volunteer Form</title>
+		<title>Lab 4</title>
 	</head>
 	<body>
 	<h1>Volunteer Form</h1>
 	<form action="http://bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" method="post">
-		
-		<fieldset>
-		<h3>Personal Information</h3>
+	
+	<h3>Personal Information</h3>	
+	<fieldset>
+	
 			<div class="firstName">
 				<label>First Name: <input type="text" name="first_name_field" placeholder="First Name"></label>
 			</div>
@@ -41,11 +42,10 @@
 						<option value="65 and Over">65 and Over</option>
 				</label>
 			</div>
-		</fieldset>
+	</fieldset>
 		
-		
-		<fieldset>
-		<h3>Availability</h3>
+	<h3>Availability</h3>	
+	<fieldset>
 			<div class="availableDays">
 				<label>Days Available:</label>
 					<div class="weekdays">
