--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
 				<label><input type="radio" name="gender_field" value="Other"> <input type="text" name="gender_field" placeholder="Other"></label>
 			</div>
 			<div class="ageSelection">
-				<label>
-					Age:
-					<select name="ageList">
+				<label>Age: <select name="age_field">
 						<option value="Under 18">Under 18</option>
 						<option value="18 - 24">18 - 24</option>
 						<option value="25 - 34">25 - 34</option>
