--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<option value="45 - 54">45 - 54</option>
 						<option value="55 - 64">55 - 64</option>
 						<option value="65 and Over">65 and Over</option>
-				</label>
+				</select></label>
 			</div>
 	</fieldset>
 		
