--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 				<label>Email Address: <input type="email" name="email_field" placeholder="example@example.com"></label>
 			</div>
 			<div class="genderSelection">
-				<label>Gender: <input type="radio" name="gender_field" value="Male"> </label>
-				<label><input type="radio" name="gender_field" value="Female"> </label>
-				<label><input type="radio" name="gender_field" value="Prefer Not To Answer"> </label>
-				<label><input type="radio" name="gender_field" value="Other"> <input type="text" name="gender_field" placeholder="Other"></label>
+				<label>Gender: <input type="radio" name="gender_field" value="Male"> Male </label>
+				<label><input type="radio" name="gender_field" value="Female"> Female </label>
+				<label><input type="radio" name="gender_field" value="Prefer Not To Answer"> Prefer Not To Answer </label>
+				<label><input type="radio" name="gender_field" value="Other"> <input type="text" name="gender_field" placeholder="Other"> Other </label>
 			</div>
 			<div class="ageSelection">
 				<label>Age: <select name="age_field">
