--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
 	<fieldset>
 	
 			<div class="firstName">
-				<label>First Name: <input type="text" name="first_name_field" placeholder="First Name"></label>
+				<label><strong>First Name:</strong> <input type="text" name="first_name_field" placeholder="First Name"></label>
 			</div>
 			<div class="lastName">
-				<label>Last Name: <input type="text" name="last_name_field" placeholder="Last Name"></label>
+				<label><strong>Last Name:</strong> <input type="text" name="last_name_field" placeholder="Last Name"></label>
 			</div>
 			<div class="phoneNumber">
-				<label>Phone Number: <input type="text" name="phone_field" placeholder="(xxx)xxx-xxxx"></label>
+				<label><strong>Phone Number:</strong> <input type="text" name="phone_field" placeholder="(xxx)xxx-xxxx"></label>
 			</div>
 			<div class="emailAddress">
-				<label>Email Address: <input type="email" name="email_field" placeholder="example@example.com"></label>
+				<label><strong>Email Address:</strong> <input type="email" name="email_field" placeholder="example@example.com"></label>
 			</div>
 			<div class="genderSelection">
-				<label>Gender: <input type="radio" name="gender_field" value="Male"> Male </label>
-				<label><input type="radio" name="gender_field" value="Female"> Female </label>
-				<label><input type="radio" name="gender_field" value="Prefer Not To Answer"> Prefer Not To Answer </label>
+				<label><strong>Gender:</strong> <input type="radio" name="gender_field" value="Male"> <strong>Male</strong> </label>
+				<label><input type="radio" name="gender_field" value="Female"> <strong>Female</strong> </label>
+				<label><input type="radio" name="gender_field" value="Prefer Not To Answer"> <strong>Prefer Not To Answer</strong> </label>
 			</div>
 			<div class="ageSelection">
-				<label>Age: <select name="age_field">
+				<label><strong>Age:</strong> <select name="age_field">
 						<option value="Under 18">Under 18</option>
 						<option value="18 - 24">18 - 24</option>
 						<option value="25 - 34">25 - 34</option>
@@ -44,7 +44,7 @@
 	<h3>Availability</h3>	
 	<fieldset>
 			<div class="availableDays">
-				<label>Days Available:</label>
+				<label><strong>Days Available:</strong></label>
 					<div class="weekdays">
 						<input type="checkbox" name="available_field[]" value="Sunday">
 							<label>Sunday</label>
@@ -64,7 +64,7 @@
 			</div>		
 			<div class="comments">
 				<div class="label">
-					<label>Comments</label>
+					<label><strong>Comments</strong></label>
 				</div>
 				<div class="textArea">
 					<textarea name="comments_field" placeholder="Comments"></textarea>
