--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 				<label><strong>Email Address:</strong> <input type="email" name="email_field" placeholder="example@example.com"></label>
 			</div>
 			<div class="genderSelection">
-				<label><strong>Gender:</strong> <input type="radio" name="gender_field" value="Male"> <strong>Male</strong> </label>
-				<label><input type="radio" name="gender_field" value="Female"> <strong>Female</strong> </label>
-				<label><input type="radio" name="gender_field" value="Prefer Not To Answer"> <strong>Prefer Not To Answer</strong> </label>
+				<label><strong>Gender:</strong> <input type="radio" name="gender_field" value="Male"> Male </label>
+				<label><input type="radio" name="gender_field" value="Female"> Female </label>
+				<label><input type="radio" name="gender_field" value="Prefer Not To Answer"> Prefer Not To Answer </label>
 			</div>
 			<div class="ageSelection">
 				<label><strong>Age:</strong> <select name="age_field">
